--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -33,7 +33,98 @@
   <!-- end::preloader -->
 
   <!-- begin::header -->
+  <div class="header">
 
+    <div>
+        <ul class="navbar-nav">
+
+            <!-- begin::navigation-toggler -->
+            <li class="nav-item navigation-toggler">
+                <a href="#" class="nav-link" title="Hide navigation">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
+                </a>
+            </li>
+            <li class="nav-item navigation-toggler mobile-toggler">
+                <a href="#" class="nav-link" title="Show navigation">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
+                </a>
+            </li>
+            <li class="nav-item">
+             <h4 class="nav-link ">{{title}}</h4>
+          </li>
+            <!-- end::navigation-toggler -->
+
+            
+        </ul>
+    </div>
+
+    <div>
+        <ul class="navbar-nav">
+
+            
+
+            <!-- begin::header search -->
+           
+            <!-- end::header search -->
+
+            <!-- begin::header minimize/maximize -->
+            
+            <!-- end::header minimize/maximize -->
+
+            <!-- begin::header messages dropdown -->
+            
+            <!-- end::header messages dropdown -->
+
+            <!-- begin::header notification dropdown -->
+            
+            <!-- end::user menu -->
+        </ul>
+
+        <!-- begin::mobile header toggler -->
+        <ul class="navbar-nav d-flex align-items-center">
+            <li class="nav-item header-toggler">
+                <a href="#" class="nav-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-down"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg>
+                </a>
+            </li>
+        </ul>
+        <!-- end::mobile header toggler -->
+    </div>
+    <div>
+      <ul class="navbar-nav">
+
+        <li class="nav-item">
+          <a href="#">اطلاعات/</a>
+        </li>
+        <li class="nav-item">
+          <a href="#">صفحات/</a>
+        </li>
+        <li class="nav-item active" aria-current="page">{{title}}</li>
+       
+
+        <!-- begin::header search -->
+        
+        <!-- end::header search -->
+
+        <!-- begin::header minimize/maximize -->
+        
+        <!-- end::header minimize/maximize -->
+
+        <!-- begin::header messages dropdown -->
+        
+        <!-- end::header messages dropdown -->
+
+        <!-- begin::header notification dropdown -->
+        
+        <!-- end::header notification dropdown -->
+
+        <!-- begin::user menu -->
+       
+        <!-- end::user menu -->
+    </ul>
+    </div>
+   
+</div>
 <!-- end::header -->
 
 <!-- begin::main -->
@@ -47,24 +138,7 @@
 <main class="main-content">
 
   <!-- begin::page-header -->
-  <div class="page-header">
-    <div class="container-fluid d-sm-flex justify-content-between">
-      <h4>{{title}}</h4>
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          
-          <li class="breadcrumb-item">
-            <a href="#">اطلاعات</a>
-          </li>
-          <li class="breadcrumb-item">
-            <a href="#">صفحات</a>
-          </li>
-          <li class="breadcrumb-item active" aria-current="page">{{title}}</li>
-         
-        </ol>
-      </nav>
-    </div>
-  </div>
+  
   <!-- end::page-header -->
 
   <div class="container-fluid">
