--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_details_aria.html
@@ -28,6 +28,16 @@
                                 </a>
                                 <div class="input-group">
                                   <h3>{{today}}</h3>
+                                  
+                                </div>
+                                <div class="input-group">
+                                  <select class="form-control" aria-label="Default select example" id="select_shift">
+                                    {% for i in shifts %}
+                                    
+                                    <option x="{{shift_id}}" value="{{i.id}}" {% if i.id == shift_id %} selected {% endif %}>{{i.name}}</option>
+                                    {% endfor %}
+                               
+                                  </select>
                                 </div>
                             </form>
                             <div class="app-pager d-flex align-items-center">
