--- a/tiny_mrp/mrp/templates/mrp/blank-page.html
+++ b/tiny_mrp/mrp/templates/mrp/blank-page.html
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li class="nav-item">
-             <h4 class="nav-link ">{{title}}</h4>
+             <h4 class="nav-link "></h4>
           </li>
             <!-- end::navigation-toggler -->
 
