--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_details_aria.html
@@ -23,15 +23,13 @@
                         </div>
                         <div class="action-right">
                             <form class="d-flex mr-3">
-                                <a href="#" class="app-sidebar-menu-button btn btn-outline-light">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu width-15 height-15"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
-                                </a>
+                               
                                 <div class="input-group">
                                   <h3>{{today}}</h3>
                                   
                                 </div>
                                 <div class="input-group">
-                                  <select class="form-control" aria-label="Default select example" id="select_shift">
+                                  <select class="form-control" aria-label="Default select example" id="select_shift2">
                                     {% for i in shifts %}
                                     
                                     <option x="{{shift_id}}" value="{{i.id}}" {% if i.id == shift_id %} selected {% endif %}>{{i.name}}</option>
@@ -45,12 +43,12 @@
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/DailyDetails?event_id={{prev_date}}&shift_di={{shift_id}}" aria-label="Previous">
+                                            <a class="page-link" href="/Tolid/DailyDetails?event_id={{prev_date}}&shift_id={{shift_id}}" aria-label="Previous">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left width-15 height-15"><polyline points="15 18 9 12 15 6"></polyline></svg>
                                             </a>
                                         </li>
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/DailyDetails?event_id={{next_date}}&shift_di={{shift_id}}" aria-label="Next">
+                                            <a class="page-link" href="/Tolid/DailyDetails?event_id={{next_date}}&shift_id={{shift_id}}" aria-label="Next">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right width-15 height-15"><polyline points="9 18 15 12 9 6"></polyline></svg>
                                             </a>
                                         </li>
