--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -120,7 +120,8 @@
       <li><a href="{% url 'register_daily_amar' %}">ورود اطلاعات روزانه</a></li>
 
       <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه</a></li>
-      <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید</a></li>
+      <li><a href="{% url 'calendar_randeman_brief' %}">راندمان روزانه تولید</a></li>
+      <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید به تفکیک شیفت</a></li>
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
       <li><a href="{% url 'monthly_brief_report' %}">آمار تولید ماهانه (راندمان)</a></li>
