--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_amar_tolid.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_amar_tolid.html
@@ -55,12 +55,12 @@
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/Daily?date={{prev_date}}" aria-label="Previous">
+                                            <a class="page-link" href="/Tolid/Daily/Brief?date={{prev_date}}" aria-label="Previous">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left width-15 height-15"><polyline points="15 18 9 12 15 6"></polyline></svg>
                                             </a>
                                         </li>
                                         <li class="page-item">
-                                            <a class="page-link" href="/Tolid/Daily?date={{next_date}}" aria-label="Next">
+                                            <a class="page-link" href="/Tolid/Daily/Brief?date={{next_date}}" aria-label="Next">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right width-15 height-15"><polyline points="9 18 15 12 9 6"></polyline></svg>
                                             </a>
                                         </li>
@@ -79,8 +79,8 @@
 
 
           </div>
-<div class="row">
-    <div class="col-md-12">
+<div class="row justify-content-center">
+    <div class="col-md-6 offset-md-1">
 
         <div class="card">
             <div class="card-body">
@@ -88,11 +88,9 @@
                 <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
                     <table class="table table-striped table-bordered">
                         <thead>
-                        <tr class="bg-info">
+                        <tr class="bg-info text-dark">
                             <th>نام دستگاه</th>
-                            {% for i in shift%}
-                            <th>{{i.name}}</th>
-                            {% endfor %}
+                           
 
                             <th>جمع </th>
                             <th>راندمان کل</th>
@@ -102,9 +100,7 @@
                             {% for i in machines_with_amar %}
                         <tr>
                             <td class="{{i.css}}">{{i.machine}}</td>
-                            {%for k in i.shift_amar %}
-                            <td class="{{i.css}}">{{k.value|floatformat:0}}</td>
-                            {% endfor %}
+                           
                             <td class="{{i.css}}">{{i.sum|floatformat:0}}</td>
                             <td class="{{i.css}}">{{i.max_speed}}</td>
                         </tr>
@@ -115,9 +111,9 @@
                         <tfoot>
                         <tr>
                           <th>نام دستگاه</th>
-                          {% for i in shift%}
+                          <!-- {% for i in shift%}
                           <th>{{i.name}}</th>
-                          {% endfor %}
+                          {% endfor %} -->
 
                           <th>جمع </th>
                           <th>راندمان کل</th>
