--- a/tiny_mrp/mrp/templates/mrp/tolid/calendar_randeman.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/calendar_randeman.html
@@ -14,6 +14,7 @@
 <!-- Fullcalendar -->
 
 {% block content %}
+
 <div class="row app-block">
                    <!-- <div class="col-md-3 app-sidebar">
                        <div class="card">
@@ -59,6 +60,20 @@
                            </div>
                        </div>
                    </div> -->
+                   <div class="col-md-3 app-sidebar">
+                    <div class="card">
+                        <div class="card-body pb-0">
+                            
+                        </div>
+                        <div>
+                            <div class="card-body pb-3">
+                                <h6 class="mb-0">رویدادها</h6>
+                                <p class="small text-muted mb-0">رویداد را بکشید و در محل مورد نظر رها کنید</p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
                    <div class="col-md-9 app-content">
                        <div class="app-content-overlay"></div>
                        <div class="card app-content-body">
