--- a/tiny_mrp/mrp/templates/mrp/tolid/monthly_detailed.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/monthly_detailed.html
@@ -105,6 +105,7 @@
                                         {% for sh in shift %}
                                             <th>{{ sh.name }}</th>
                                         {% endfor %}
+                                        <th>جمع</th>
                                         <!-- Add more headers if needed -->
                                     </tr>
                                 </thead>
@@ -119,6 +120,7 @@
                                                 <td>{{ day.product|get_item:shifts.id|floatformat:2 }}</td>
                                                 {% endif %}
                                             {% endfor %}
+                                            <td>{{ day.product|get_sum_item|floatformat:2 }}</td>
                                             <!-- Add more columns for other data -->
                                         </tr>
 
