--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -36,6 +36,15 @@
                                
                                   </select>
                                 </li>
+                                <li class="list-inline-item mb-0">
+                                  <select class="form-control" aria-label="Default select example" id="select_shift">
+                                    {% for i in makan %}
+                                    
+                                    <option  value="{{i.id}}" {% if i.id == makan_id %} selected {% endif %}>{{i.assetName}}</option>
+                                    {% endfor %}
+                               
+                                  </select>
+                                </li>
                                 
                             </ul>
                         </div>
