--- a/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
@@ -152,6 +152,41 @@
                             </div> -->
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between">
+                                
+                                <div>
+                                    <a href="#" class="mr-3">
+                                        <i class="fa fa-refresh"></i>
+                                    </a>
+                                    <span class="dropdown">
+                                        <a href="#" data-toggle="dropdown" aria-haspopup="true"
+                                           aria-expanded="false">
+                                            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+                                        </a>
+                                        <span class="dropdown-menu dropdown-menu-left">
+                                            <a href="#" class="dropdown-item">گزارش</a>
+                                            <a href="#" class="dropdown-item">دانلود</a>
+                                            <a href="#" class="dropdown-item">بستن</a>
+                                        </span>
+                                    </span>
+                                </div>
+                            </div>
+                                 <!-- <canvas id="hot-products"></canvas>
+                                 <div id="hot-products-legends"></div> -->
+            
+            
+            
+                                 <div id="barTabProductionChartholder">
+            
+                                    <div id="barTabProductionChart"></div>
+                                 </div>
+                            <!-- <div class="card">
+                                    <canvas id="countries"></canvas>
+                            </div> -->
+                        </div>
+                    </div>
 
                 </div>
             </div>
