--- a/tiny_mrp/mrp/templates/mrp/dashboard/info_card.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/info_card.html
@@ -8,7 +8,7 @@
                                 <div>تولید</div>
                             </div>
                             <div>
-                                <span class="dashboard-pie-1" style="display: none;">2/5</span><svg class="peity" height="60" width="60"><path d="M 30.000000000000004 0 A 30 30 0 0 1 47.633557568774194 54.270509831248425 L 30 30" data-value="2" fill="rgba(21, 101, 192, 0.3)"></path><path d="M 47.633557568774194 54.270509831248425 A 30 30 0 1 1 29.999999999999993 0 L 30 30" data-value="3" fill="rgb(21, 101, 192)"></path></svg>
+                                <span class="dashboard-pie-1" style="display: none;">2/5</span><svg class="peity" height="50" width="100"><rect data-value="8" fill="rgb(255, 68, 68)" x="1" y="5.555555555555557" width="8" height="44.44444444444444"></rect><rect data-value="3" fill="rgba(255, 68, 68, 0.3)" x="11.000000000000002" y="33.333333333333336" width="7.999999999999998" height="16.666666666666664"></rect><rect data-value="2" fill="rgb(255, 68, 68)" x="21" y="38.888888888888886" width="8" height="11.111111111111114"></rect><rect data-value="6" fill="rgba(255, 68, 68, 0.3)" x="31" y="16.66666666666667" width="8" height="33.33333333333333"></rect><rect data-value="5" fill="rgb(255, 68, 68)" x="40.99999999999999" y="22.22222222222222" width="8.000000000000014" height="27.77777777777778"></rect><rect data-value="9" fill="rgba(255, 68, 68, 0.3)" x="50.99999999999999" y="0" width="8.000000000000007" height="50"></rect><rect data-value="7" fill="rgb(255, 68, 68)" x="61" y="11.111111111111107" width="8" height="38.88888888888889"></rect><rect data-value="3" fill="rgba(255, 68, 68, 0.3)" x="71" y="33.333333333333336" width="8" height="16.666666666666664"></rect><rect data-value="5" fill="rgb(255, 68, 68)" x="81" y="22.22222222222222" width="8" height="27.77777777777778"></rect><rect data-value="2" fill="rgba(255, 68, 68, 0.3)" x="91" y="38.888888888888886" width="8" height="11.111111111111114"></rect></svg>
                             </div>
                         </div>
                     </div>
@@ -19,11 +19,11 @@
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
                             <div>
-                                <h2 class="font-weight-bold mb-2">3.137</h2>
+                                <h2 class="font-weight-bold mb-2" id="waste_card">3.137</h2>
                                 <div>درصد ضایعات</div>
                             </div>
                             <div>
-                                <span class="dashboard-pie-2" style="display: none;">4/5</span><svg class="peity" height="60" width="60"><path d="M 30.000000000000004 0 A 30 30 0 1 1 1.4683045111453907 20.729490168751582 L 30 30" data-value="4" fill="rgba(0, 200, 81, 0.3)"></path><path d="M 1.4683045111453907 20.729490168751582 A 30 30 0 0 1 29.999999999999993 0 L 30 30" data-value="1" fill="rgb(0, 200, 81)"></path></svg>
+                                <span class="dashboard-pie-2" style="display: none;">3/5</span><svg class="peity" height="60" width="60"><path d="M 30.000000000000004 0 A 30 30 0 1 1 1.4683045111453907 20.729490168751582 L 30 30" data-value="1" fill="rgba(0, 200, 81, 0.3)"></path><path d="M 1.4683045111453907 20.729490168751582 A 30 30 0 0 1 29.999999999999993 0 L 30 30" data-value="1" fill="rgb(0, 200, 81)"></path></svg>
                             </div>
                         </div>
                     </div>
