--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -27,7 +27,7 @@
                                     </div>
                                 </li>
 
-                                <li class="list-inline-item mb-0">
+                                <li class="list-inline-item mb-0" style="width:90pt">
                                   <select class="form-control" aria-label="Default select example" id="select_shift">
                                     {% for i in shifts %}
                                     
