--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznForm.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznForm.html
@@ -3,6 +3,7 @@
 <div class="row">
 <div class="col-sm-12 b-r">
   <input type="hidden" id="js_data"/>
+  <input type="hidden" id="makan_zayeat" name="makan_zayeat" value={{makan}} />
 {% for c in shifts %}
 <h3>{{c.name}}</h3>
 <div class=""> <!-- Required for Responsive -->
