--- a/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/main_dashboard.html
@@ -28,25 +28,28 @@
                                 </span>
                             </div>
                     </li>
-                    <li class="list-inline-item mb-0">
+                    <li class="list-inline-item mb-0" style="width:90pt">
                         <select name="" id="machines" class="form-control">
                             {% for i in assets %}
-                            <option value="{{i.asset_id}}" data-type={{i.asset_type}}>{{i.asset_name}}</option>
+                            <option value="{{i.id}}" data-type={{i.assetTypes}}>{{i.assetName}}</option>
                             {% endfor %}
                         </select>
+                    </li>
+                    <li class="list-inline-item mb-0" style="width:90pt">
+                        <div class="input-group">
+                          
+                                <button class="btn btn-outline-light" type="button" id="button-addon1">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                                </button>
+                            
+                        </div>
                     </li>
                 </ul>
             </div>
             <div class="action-right">
                 <form class="d-flex mr-3">
                    
-                    <div class="input-group">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-light" type="button" id="button-addon1">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-                            </button>
-                        </div>
-                    </div>
+                   
                 </form>
             </div>
         </div>
