--- a/tiny_mrp/mrp/templates/mrp/tolid/monthly_detailed.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/monthly_detailed.html
@@ -23,10 +23,15 @@
                 <ul class="list-inline">
 
 
-                    <li class="list-inline-item mb-0">
-
-
-                    </li>
+                    <li class="list-inline-item mb-0" style="width:90pt">
+                        <select class="form-control" aria-label="Default select example" id="select_makan">
+                          {% for i in makan %}
+                          
+                          <option  value="{{i.id}}" {% if i.id == makan_id %} selected {% endif %}>{{i.assetName}}</option>
+                          {% endfor %}
+                     
+                        </select>
+                      </li>
 
                 </ul>
             </div>
@@ -151,6 +156,7 @@
 {% endblock%}
 {% block javascript %}
 <script type="text/javascript">
+$(document).ready(function() {
   $("#button-addon1").click(function(){
     if($("#jalaliMonths").val()>0 && $("#year").val()>0){
     window.location.href=`/Monthly?month=${$("#jalaliMonths").val()}&year=${$("#year").val()}`;
@@ -159,6 +165,13 @@
     toastr.error("یک مقدار انتخاب نمایید");
   }
   });
+  $('#select_makan').change(function() {
+    var selectedValue = $(this).val();
+    if (selectedValue) { // check if the value is not empty
+        window.location.href = `/Monthly/?makan_id=${selectedValue}`;
+    }
+});
+});
 
 </script>
 {% endblock %}
