--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/zayeatVaznList.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/zayeatVaznList.html
@@ -4,7 +4,7 @@
 {% load custom_filters %}
 {% load widget_tweaks %}
 <div class="row">
-  <h1>ضایعات مربوط به {{jalali}}</h1>
+  <h1>ضایعات مربوط به {{jalali}} {{makan_name}}</h1>
 <div class="col-sm-12 b-r">
   <input type="hidden" id="js_data"/>
 {% for c in shifts %}
