--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -205,4 +205,13 @@
 
 
  <script src="{% static 'project/tolid.js' %}"></script>
+ <script>
+  $(document).ready(function() {
+    var myVar = "{{ selected_date|escapejs }}";
+    if(myVar!="False"){
+    $("#search").val(myVar);
+    }
+    // console.log(myVar);
+  });
+</script>
 {% endblock %}
