--- a/tiny_mrp/mrp/templates/mrp/dashboard/info_card.html
+++ b/tiny_mrp/mrp/templates/mrp/dashboard/info_card.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
+            {% comment %} <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
@@ -58,5 +58,5 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> {% endcomment %}
         </div>
