--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -125,6 +125,7 @@
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
       <li><a href="{% url 'monthly_brief_report' %}">آمار تولید ماهانه (راندمان)</a></li>
+      <li><a href="{% url 'monthly_brief_report_v2' %}">آمار تولید ماهانه (راندمانV2)</a></li>
       <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف
       <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف
       </a></li>
