modify final randeman list

--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
@@ -16,9 +16,11 @@
                     <div class="row" >
                       <div class="col text-center ">
                         <h3 style="font-family: 'iransans-bold'">
-                        <img src="{% static 'assets/media/image/IMG_20180602_111455_515.jpg' %}" width="10%" alt="">
 
-                           راندمان اپراتورهای شیفت {{i.name}} {{mah}} ماه {{sal}}</h3>
+                           راندمان اپراتورهای شیفت {{i.name}} {{mah}} ماه {{sal}}
+                        <img src="{% static 'assets/media/image/IMG_20180602_111455_515.jpg' %}" width="10%" alt="">
+                          
+                          </h3>
                       </div>
                       <div class="table-responsive"> <!-- Required for Responsive -->
                         <table class="table table-striped table-bordered" id="company-table">
@@ -131,19 +133,22 @@
                     <p>  <div class="row" >
                       <div class="col text-center ">
                         <h3 style="font-family: 'iransans-bold'">
-                        <img src="{% static 'assets/media/image/IMG_20180602_111455_515.jpg' %}" width="10%" alt="">
 
-                           {{mah}} ماه {{sal}}</h3>
+                           {{mah}} ماه {{sal}}
+                          
+                        <img src="{% static 'assets/media/image/IMG_20180602_111455_515.jpg' %}" width="10%" alt="">
+                          
+                          </h3>
                       </div>
                         <div class="table-responsive"> <!-- Required for Responsive -->
                           <table class="table table-striped table-bordered" id="company-table">
                             <thead class="bg-success-gradient">
                               <tr>
 
-                                <th style="color:#F3FEB8">مجموع راندمان تولید</th>
-                                <th style="color:#F3FEB8">مجموع پاداش تولید</th>
-                                <th style="color:#F3FEB8">مجموع پاداش نظافت</th>
-                                <th style="color:#F3FEB8">مجموع کل</th>
+                                <th style="color:#000000">مجموع راندمان تولید</th>
+                                <th style="color:#000000">مجموع پاداش تولید</th>
+                                <th style="color:#000000">مجموع پاداش نظافت</th>
+                                <th style="color:#000000">مجموع کل</th>
                               </tr>
                               </thead>
                               <tbody>
