begining new tolid rank
dsa

--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalSarshiftRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalSarshiftRandemanList.html
@@ -13,14 +13,14 @@
             <thead class="bg-info">
               <tr>
 
-                <th scope="col">نام</th>
-                <th scope="col">تولید کل دستگاهها</th>
-                <th scope="col">راندمان تولید</th>
-                <th scope="col">رتبه تولید</th>
-                <th scope="col">راندمان رتبه تولید</th>
-                <th scope="col">رتبه نظافت</th>
-                <th scope="col">راندمان نظافت</th>
-                <th scope="col">جمع کل</th>
+                <th scope="col" style="color:#000000">نام</th>
+                <th scope="col" style="color:#000000">تولید کل دستگاهها</th>
+                <th scope="col" style="color:#000000">راندمان تولید</th>
+                <th scope="col" style="color:#000000">رتبه تولید</th>
+                <th scope="col" style="color:#000000">راندمان رتبه تولید</th>
+                <th scope="col" style="color:#000000">رتبه نظافت</th>
+                <th scope="col" style="color:#000000">راندمان نظافت</th>
+                <th scope="col" style="color:#000000">جمع کل</th>
 
               </tr>
             </thead>
@@ -46,7 +46,7 @@
               <td>{{sum_padashe_tolid_personel|intcomma}}</td>
               <td></td>
               <td>{{sum_padashe_nezafat_personel|intcomma}}</td>
-              <td class="bg-warning">{{sum_sum|floatformat:0|intcomma}}</td>
+              <td  style="color:#000000">{{sum_sum|floatformat:0|intcomma}}</td>
             </tr>
 
             </tbody>
