--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -122,6 +122,7 @@
       <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه</a></li>
       <li><a href="{% url 'calendar_randeman_brief' %}">راندمان روزانه تولید</a></li>
       <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید به تفکیک شیفت</a></li>
+      <li><a href="{% url 'monthly_detaild_report_ezami' %}">سرانه تولید</a></li>
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
       <li><a href="{% url 'monthly_brief_report' %}">آمار تولید ماهانه (راندمان)</a></li>
