--- a/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznCreate.html
+++ b/tiny_mrp/mrp/templates/mrp/zayeat_vazn/partialZayeatVaznCreate.html
@@ -10,7 +10,7 @@
    {% include 'mrp/zayeat_vazn/partialZayeatVaznForm.html' %}
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default">انصراف</button>
+    <button type="button" class="btn btn-default" data-dismiss="modal">انصراف</button>
 
     <button type="submit" class="btn btn-primary" >ذخیره</button>
 
